@@ -10,3 +10,4 @@ extern char *memw_recent_files[];
 extern HWND memw_pwindow;
 extern bool RamChangeInitialize;
 extern bool MemWCollapsed;
+extern bool BindToMain;
